--- a/naive_linreg_impl.ipynb
+++ b/naive_linreg_impl.ipynb
@@ -184,12 +184,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, X_train, y_train, epochs=100, lr=0.1):\n",
+    "def fit(model, X_train, y_train, epochs=100, lr=0.1):\n",
     "    optimizer = tf.keras.optimizers.Adam(learning_rate=lr)\n",
     "    indices = np.arange(len(X_train))\n",
     "    np.random.default_rng(69).shuffle(indices)\n",
     "        \n",
-    "    for epoch in range(epochs):\n",
+    "    for epoch in range(epochs):                                                                                                                                                                                                                                                                                                                                                     \n",
     "        for batch_start in range(0, len(X_train), 11):\n",
     "            batch_idx = indices[batch_start:batch_start + 11]\n",
     "            with tf.GradientTape() as tape:\n",
@@ -1217,7 +1217,7 @@
     }
    ],
    "source": [
-    "m = train(model, X_train, y_train, epochs=100, lr=0.01)\n",
+    "m = fit(model, X_train, y_train, epochs=100, lr=0.01)\n",
     "y_pred = m(X_train)"
    ]
   },
