--- a/pytorch/pytorch train test.ipynb
+++ b/pytorch/pytorch train test.ipynb
@@ -338,12 +338,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.set_grad_enabled(False)"
+    "import torch.nn as nn "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lin_model = nn.Linear(1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Parameter containing:\n",
+       " tensor([[-0.7392]], requires_grad=True),\n",
+       " Parameter containing:\n",
+       " tensor([0.4539], requires_grad=True))"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lin_model.weight, lin_model.bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.randint(10, (9, 1)).float()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-5.4595],\n",
+       "        [-0.2853],\n",
+       "        [-0.2853],\n",
+       "        [-6.1987],\n",
+       "        [-4.7203],\n",
+       "        [-3.2420],\n",
+       "        [-3.2420],\n",
+       "        [-1.7636],\n",
+       "        [-4.7203]], grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lin_model(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Parameter containing:\n",
+       " tensor([[-0.7392]], requires_grad=True),\n",
+       " Parameter containing:\n",
+       " tensor([0.4539], requires_grad=True)]"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(lin_model.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('weight',\n",
+       "  Parameter containing:\n",
+       "  tensor([[-0.7392]], requires_grad=True)),\n",
+       " ('bias',\n",
+       "  Parameter containing:\n",
+       "  tensor([0.4539], requires_grad=True))]"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(lin_model.named_parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
